fix landing alignment

--- a/webapp/src/pages/LandingPage/LandingPage.css
+++ b/webapp/src/pages/LandingPage/LandingPage.css
@@ -11,7 +11,7 @@
   grid-template-columns: repeat(var(--column-number), 1fr);
   grid-template-rows: auto 1fr auto auto;
   grid-template-areas:
-    'title title title title'
+    'title title ... ...'
     'animation animation animation animation'
     'subtitle subtitle subtitle subtitle'
     'login login login login';
@@ -35,10 +35,13 @@
 
 .landing-subtitle {
   grid-area: subtitle;
+  justify-self: center;
+  max-width: 20rem;
 }
 
 .landing-buttons {
   grid-area: login;
+  margin: 0;
   justify-self: center;
   display: flex;
   flex-direction: column;
@@ -49,8 +52,6 @@
 
 .landing-buttons,
 .landing-buttons > button {
-  min-width: 15rem;
-  max-width: 20rem;
   width: 100%;
 }
 
@@ -63,13 +64,18 @@
     grid-template-columns: repeat(var(--column-number), 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
-      'title title title title title title ... ... ... ... ... ...'
-      'subtitle subtitle subtitle subtitle subtitle ... ... ... animation animation animation animation'
+      'title title title ... ... ... ... ... ... ... ... ...'
+      'subtitle subtitle subtitle subtitle ... ... ... ... animation animation animation animation'
       'login login login login ... ... ... ... animation animation animation animation';
   }
 
   .landing-buttons {
-    align-self: center;
+    /* align-self: center; */
+    justify-self: start;
+    align-items: flex-start;
+  }
+
+  .landing-subtitle {
     justify-self: start;
   }
 }
